fix overlap of nav items from svg promo banner

--- a/lets-get-sweaty/src/styles/modules/promo-banner.scss
+++ b/lets-get-sweaty/src/styles/modules/promo-banner.scss
@@ -1,19 +1,24 @@
 /*================ Site Header ================*/
 
 .promoBanner{
-	width:251px;
-	height:144px;
-	position:absolute;
-    right:15em;
+    width: 300px;
+    height: 144px;
+    position: absolute;
+    right: 20em;
+    display: inline-block;
     top: -2em;
     cursor: default;
 }
 
 .promoBannerImg{
-	position:absolute;
-	width:251px;
-	height:150px;
-	right: 6em;
+    position: absolute;
+    right: -1em;
+	
+	svg {
+		position: absolute;
+		right: -1em;
+		overflow: visible !important;
+	}
 }
 
 #promoPoly,
@@ -27,27 +32,27 @@
 }
 
 .promoBanner:hover #promoPoly{
-	transform: translate(-4em, -5em);
+	transform: translate(-4em, -5em) rotate(0.01deg);
 }
 
 .promoBanner:hover #promoS{
-	transform: rotate(-45deg) translate(-3em, 4.5em);
+	transform: rotate(-45deg) translate(-3em, 4.5em) rotate(0.01deg);
 }
 
 .promoBanner:hover #promoLeaf{
-	transform: rotate(-15deg) translate(1em, 2em);
+	transform: rotate(-15deg) translate(1em, 2em) rotate(0.01deg);
 }
 
 .promoBanner:hover #promoCurl{
-	transform: rotate(45deg) translate(3em, -14em);
+	transform: rotate(45deg) translate(3em, -14em) rotate(0.01deg);
 }
 
 .promoBanner:hover #promoHand{
-	transform: rotate(140deg) translate(-1.5em, -13.5em);
+	transform: rotate(140deg) translate(-1.5em, -13.5em) rotate(0.01deg);
 }
 
 .promoBanner:hover #promoHeart{
-	transform: translate(0em, 1.5em);
+	transform: translate(0em, 1.5em) rotate(0.01deg);
 }
 
 // p{
@@ -71,24 +76,12 @@
 	padding: .5em 0 0;
 }
 
-// .promoBanner:hover + .top-nav .promoInfo{
-// 	opacity:1;
-// }
-
-// li.promo {
-//     margin-top: 10px;
-//     padding: 0 8px;
-//     width: 251px;
-//     position: absolute;
-//     right: 17em;
-//     text-align: center;
-// }
-
 .promoWord {
     text-align: center;
     position: absolute;
-    top: 67px;
-    width: 251px;
+    top: 68px;
+    width: 150px;
+    right: -1em;
 }
 
 @media screen and (max-width:850px){
@@ -114,6 +107,8 @@
 	.promoWord{
 		color:#ef6c55;
 		margin:auto;
+		width: 100%;
+		right: 0;
 	}
 
 	.promoInfo{
@@ -122,3 +117,4 @@
 		margin:auto;
 	}
 }
+
